WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30884
REGRESSION: Web Inspector doesn't show CSS rules properly for iframes
https://bugs.webkit.org/show_bug.cgi?id=30884
Summary
REGRESSION: Web Inspector doesn't show CSS rules properly for iframes
Jeffrey Rosen
Reported
2009-10-28 15:18:27 PDT
Created
attachment 42057
[details]
iframe inspector bug The web inspector no longer appears to be aware of CSS rules inside of iframes. It incorrectly displays the parent's css rules instead. See attachment, and inspect the iframe and notice that it says the background is blue, like the parent, instead of green.
Attachments
iframe inspector bug
(1.53 KB, application/zip)
2009-10-28 15:18 PDT
,
Jeffrey Rosen
no flags
Details
[PATCH]
(22.06 KB, patch)
2009-11-05 11:07 PST
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
[PATCH] Same with missing resources file.
(22.57 KB, patch)
2009-11-05 11:08 PST
,
Pavel Feldman
timothy
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2009-11-05 11:07:14 PST
Created
attachment 42578
[details]
[PATCH] While I was doing a test for this one.... I could not resist and brushed other tests a bit: - reused console code - run all tests after pending dispatches - added a 200ms timeout instead of 0 one to see how it affects flakiness on bots - reused some elements code with elements panel test.
Pavel Feldman
Comment 2
2009-11-05 11:08:49 PST
Created
attachment 42579
[details]
[PATCH] Same with missing resources file.
Pavel Feldman
Comment 3
2009-11-05 12:13:53 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/ChangeLog M LayoutTests/inspector/console-dir.html M LayoutTests/inspector/console-dirxml.html M LayoutTests/inspector/console-format-collections-expected.txt M LayoutTests/inspector/console-format-collections.html M LayoutTests/inspector/console-format.html M LayoutTests/inspector/console-tests.html M LayoutTests/inspector/elements-panel-structure-expected.txt M LayoutTests/inspector/elements-panel-structure.html M LayoutTests/inspector/evaluate-in-frontend.js A LayoutTests/inspector/resources/styles-iframe-data.html A LayoutTests/inspector/styles-iframe-expected.txt A LayoutTests/inspector/styles-iframe.html M LayoutTests/platform/qt/Skipped M WebCore/ChangeLog M WebCore/inspector/InspectorController.cpp M WebCore/inspector/front-end/DOMAgent.js M WebCore/inspector/front-end/InjectedScript.js M WebCore/inspector/front-end/TestController.js Committed
r50574
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug