2009-11-05  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        REGRESSION: Web Inspector doesn't show CSS rules properly for iframes

        https://bugs.webkit.org/show_bug.cgi?id=30884

        Test: inspector/styles-iframe.html

        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMNode):
        * inspector/front-end/InjectedScript.js:
        (InjectedScript.getStyles):
        (InjectedScript.getComputedStyle):
        (InjectedScript.addStyleSelector):
        * inspector/front-end/TestController.js:
        (WebInspector.TestController.prototype.notifyDone):
        (WebInspector.TestController.prototype.runAfterPendingDispatches):
        (WebInspector.evaluateForTestInFrontend.invokeMethod):
        (WebInspector.evaluateForTestInFrontend):


Canonical link: https://commits.webkit.org/42004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50574 268f45cc-cd09-0410-ab3c-d52691b4dbfc